--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   shared_preferences: ^2.2.0
   http: ^1.1.0
+  botton:
+    path: ../../../side_projects/botton
 
   flutter_localizations:
     sdk: flutter
